...
            "value" : "Die App ist aktiviert."
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The app has been activated."
          }
        }
      }
    },
    "activation.failed" : {
      "extractionState" : "manual",
...
            "value" : "App-Aktivierung"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "App activation"
          }
        }
      }
    },
    "activation.running" : {
      "extractionState" : "manual",
...
    "demo.label.fitting" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aschegeruch"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ash smell"
          }
        }
      }
    },
    "demo.label.lessFitting" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Regenschirmmoment"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Umbrella moment"
...
